feat: force sync all
